--- a/src/main/resources/templates/welcome/welcome.html
+++ b/src/main/resources/templates/welcome/welcome.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org" lang="zh">
 <head>
-    <title>Home</title>
+    <title>欢迎关注小伦的公众号</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="keywords" content=""/>
@@ -536,8 +536,9 @@
             <h3>Find Your Destination</h3>
             <p class="vd">Lorem ipsum dolor sit amet. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
                 nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident</p>
-            <a href="#" data-toggle="modal" data-target="#myModal2" class="play" href="#"><i
-                    class="glyphicon glyphicon-play-circle"> </i></a>
+            <a data-toggle="modal" data-target="#myModal2" class="play" href="#">
+                <i class="glyphicon glyphicon-play-circle"> </i>
+            </a>
         </div>
 
 
